fixed link boxes on homepage breaking mobile styles with overflow

--- a/src/app/styles/pages/_home.scss
+++ b/src/app/styles/pages/_home.scss
@@ -42,27 +42,29 @@
             }
 
             .link-box {
-                width: 8rem;
+                width: 5rem;
                 height: 3.8rem;
                 display: inline-block;
                 position: absolute;
-                right: -5rem;
+                right: -2rem;
                 top: 50%;
                 transform: translate(0, -50%);
                 z-index: 100;
-                padding: 0.35rem;
+                padding: 0.35rem 0 0.35rem 0.35rem;
 
                 div {
                     height: 100%;
                     width: 100%;
-                    border: solid 2px $off-white;
+                    border-top: solid 2px $off-white;
+                    border-left: solid 2px $off-white;
+                    border-bottom: solid 2px $off-white;
                     margin: auto;
 
                     svg {
                         height: 1rem;
                         position: absolute;
                         top: 50%;
-                        left: 50%;
+                        left: 70%;
                         transform: translate(0, -50%);
                     }
                 }
@@ -98,6 +100,16 @@
             .sub-hero-text {
                 font-size: 1.8rem;
                 line-height: 2.4rem;
+            }
+        }
+
+        ul {
+
+            li {
+
+                .link-box {
+                    right: -3rem;
+                }
             }
         }
 
